<resources>
    <string name="app_name">GoCipes</string>
    <string name="analysis_gizi">Analisis Gizi</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="category">Kategori</string>
    <string name="search_menu">Cari Menu Masakan</string>
    <string name="health_cook">Masak makanan sehat lebih menyenangkan!!</string>
    <string name="superior_food">Makanan Paling Unggul</string>
    <string name="guide">Artikel</string>
    <string name="technique">Teknik Memasak</string>
    <string name="favorite_title">Olahan Favorite</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="ubah_foto">Ubah Foto</string>
    <string name="tentang_anda">Tentang Anda</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="qna">QnA</string>
    <string name="info_aplikasi">Info Aplikasi</string>
    <string name="keluar">Keluar</string>
    <string name="edit">Ubah</string>
    <string name="save">Simpan</string>
    <string name="dummy_email">example@gmail.com</string>
    <string name="dummy_username">example</string>
    <string name="dummy_password">******</string>
    <string name="artikel">Artikel</string>
    <string name="dummy_artikel">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur elementum sit amet dui at tristique. Quisque mattis mattis gravida. Ut id lacus elit. Donec justo augue, maximus facilisis nisi a, blandit luctus orci. Morbi elementum, felis vel iaculis dignissim, dolor libero posuere nisl, sed euismod metus diam sit amet lectus. Quisque et fringilla quam, at malesuada nunc. Vivamus a nulla imperdiet metus facilisis bibendum a id dolor. Quisque feugiat malesuada sapien, sodales convallis ipsum dictum at. Ut vehicula quam a dapibus interdum. Nunc sit amet lobortis tortor, vitae fringilla eros. Duis vel mi justo. In hac habitasse platea dictumst. Mauris eleifend vel ex eu vulputate. Nam augue quam, rutrum sit amet suscipit et, malesuada accumsan turpis. Phasellus pulvinar pulvinar auctor. Maecenas consequat iaculis dolor, ac laoreet urna porttitor sed.\nDonec dictum justo non varius porta. Etiam et nisl id ante fringilla venenatis non sit amet felis. Nunc auctor leo at ante suscipit faucibus. Vivamus vehicula tempus orci, et mollis erat pharetra at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris eu pulvinar augue. Nunc mattis lorem ac vestibulum tempus. Nulla id tincidunt est. Maecenas egestas ligula ut suscipit pharetra.</string>
    <string name="article_photo">Foto Artikel</string>
    <string name="are_you_ready">Siapkah Anda memasak hari ini?</string>
    <string name="ingredients">Bahan-bahan</string>
    <string name="item_ingredients">• %1$s</string>
    <string name="time">Waktu</string>
    <string name="start_cook">Mulai Memasak</string>
    <string name="set_time">Atur Waktu</string>
    <string name="by_step">Step %1$s</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="forgot_password_desc">Masukkan Email atau Nama Pengguna yang terhubung dengan akun Anda.</string>
    <string name="show_all"><u>Lihat Semua</u></string>
    <string name="search_ingridient">Cari Bahan Masakan</string>
    <string name="head_analysis">Bahan bahan</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>