<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Halo, "
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/siv_profile"
        app:layout_constraintBottom_toTopOf="@id/tv_ready"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_hello"
        app:layout_constraintStart_toEndOf="@id/tv_hello"
        app:layout_constraintTop_toTopOf="@id/tv_hello"
        app:layout_constraintEnd_toStartOf="@id/siv_profile"
        tools:text="Mutiara!" />

    <TextView
        android:id="@+id/tv_ready"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/are_you_ready"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_hello"
        app:layout_constraintStart_toStartOf="@id/tv_hello"
        app:layout_constraintEnd_toStartOf="@id/siv_profile"
        app:layout_constraintBottom_toBottomOf="@id/siv_profile"/>

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/search_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/siv_profile" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/category"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_category" />

    <TextView
        android:id="@+id/tv_food"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/superior_food"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/tv_all_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_category" />

    <TextView
        android:id="@+id/tv_all_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/primary"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_food" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingStart="8dp"
        android:paddingBottom="1dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_food" />

    <TextView
        android:id="@+id/tv_guide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/guide"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/tv_all_article"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_food" />

    <TextView
        android:id="@+id/tv_all_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/primary"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_guide" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="1dp"
        android:paddingStart="8dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_guide" />

    <TextView
        android:id="@+id/tv_technique"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/technique"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_guide" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_technique"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_technique" />
</androidx.constraintlayout.widget.ConstraintLayout>