<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_pengguna"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:hint="@string/nama_pengguna"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="8dp"
        android:textSize="14sp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:hint="@string/email"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="8dp"
        android:textSize="14sp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kata_sandi"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/kata_sandi"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="8dp"
        android:textSize="14sp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="44dp"
        android:text="Daftar"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>